<resources>
    <string name="app_name">LayoutProject2</string>
    <string name="this_is_my_layout_project">This is my layout project</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="checkbox1">CheckBox</string>
    <string name="checkbox2">CheckBox</string>
    <string name="checkbox3">CheckBox</string>
    <string name="checkbox4">CheckBox</string>
    <string name="checkbox5">CheckBox</string>
    <string name="checkbox6">CheckBox</string>
    <string name="check_box_1">Check Box 1</string>
    <string name="check_box_2">Check Box 2</string>
    <string name="ckeck_box_3">Ckeck Box 3</string>
    <string name="check_box_4">Check Box 4</string>
    <string name="check_box_5">Check Box 5</string>
    <string name="check_box_6">Check Box 6</string>
    <string name="check_box_3">Check Box 3</string>
    <string name="pic">TODO</string>
</resources>